@@ -1,0 +1,10 @@
+Title: Nagios: define_contactgroups = False is handled correctly again
+Level: 1
+Component: core
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i1
+Date: 1472729184
+
+
