@@ -26,6 +26,7 @@
     * 3617 FIX: cmk -I without host specification now (again) always uses cache files...
     * 3149 FIX: fixed rare crash if alert handling tried to long non-latin characters
     * 3843 FIX: Fixed reporting of crashes when using Nagios core
+    * 3846 FIX: Nagios: define_contactgroups = False is handled correctly again
 
     Checks & Agents:
     * 3183 aruba_wlc_aps: new check which monitors the provisioned accesspoints of an Aruba Network WLAN Controller
